@@ -128,6 +128,7 @@ files="\
   RunTest.bat \
   pcre-config.in \
   libpcre.pc.in \
+  libpcreposix.pc.in \
   libpcrecpp.pc.in \
   config.h.in \
   pcre_printint.src \
